# heo_relax

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: test.xyz  valid.xyz
heos_relax/: structure_generation.py
heos_relax/data_handling/: datasets.py  element_sets.py  lemat.py  visualisation.py
heos_relax/evaluation/: eval_utils.py  evaluation_tasks.py
scripts/: evaluate_models.py  load_data_from_lemat.py  structure_generation.py
training/: finetune_training_config.yaml
